<?xml version="1.0" encoding="utf-8"?>
<!-- Xml for the "main" activity where user can view posts, etc -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hoplyActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hoply"
    android:background="@color/yes">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/beer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="3dp" />

    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        android:id="@+id/linear">

        <!-- Give user possibility to scroll through the comments -->
        <Button
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/yes"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Write_Your_Thoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_your_thoughts"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_below="@+id/logOut"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold">
        </TextView>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Write_Your_Thoughts">

            <!-- Write your own post -->
            <EditText
                android:id="@+id/writePost"
                android:layout_below="@+id/Write_Your_Thoughts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/take_the_risk_or_lose_the_chance"
                android:background="@drawable/inputs"
                android:autofillHints="Write Post"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                tools:ignore="NotSibling" />

            <ImageView
                android:id="@+id/choosedImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/todo" />

            <!-- Insert comment on button press-->
            <ImageView
                android:id="@+id/postSomething"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/send"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/post_image"
            android:layout_below="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            tools:ignore="NotSibling">
        </ImageView>

        <!-- Text "Top Posts" -->
        <TextView
            android:id="@+id/textView"
            android:layout_below="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/top_posts"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <!-- RecyclerView containing all posts -->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:id="@+id/posts"
            android:scrollbars="vertical"
        />

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/progress"
        android:visibility="gone"
        tools:ignore="MissingConstraints">
    </ProgressBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp"
        app:backgroundTint="@color/yes"
        android:src="@drawable/up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>