<?xml version="1.0" encoding="utf-8"?>
<!-- Xml for showing the comments for each post-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commentActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/originalCom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/original_post"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/originalComment"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/originalUserName"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/originalUserId"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/originalUserName"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/hint"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/originalUserId"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/commentsss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:text="@string/comments"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/border"/>

            <!-- RecyclerView containing all the commens belonging to this post -->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/comments"
                android:scrollbars="vertical"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/writeComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="Write Post"
            android:background="@drawable/inputs"
            android:hint="Write comment"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/hint" />

        <ImageView
            android:id="@+id/commentSomething"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/send"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

</RelativeLayout>